[CNFT1-2778]  Patient add API: Sex & Birth (#1835)
* birth test

* other test clean up

* gender tests

* patien create with sex & birth

* birthday as localdatetime

* sex & birth

* crossed fingers

* use database user secret in workflows

* questions

* external testing configuration

* try

* update gradle

* test logging

* reduce cucumber logging

* Refactors NBSDatabaseContainer to a specialied container for JDBC

* try new container

* clean-up and real image name

* sonar

* default database user