@@ -13,7 +13,6 @@ import gov.cdc.nbs.repository.PersonRepository;
 import gov.cdc.nbs.support.util.RandomUtil;
 import gov.cdc.nbs.testing.authorization.ActiveUser;
 import gov.cdc.nbs.testing.support.Active;
-import gov.cdc.nbs.testing.support.Available;
 import io.cucumber.java.After;
 import io.cucumber.java.Before;
 import io.cucumber.java.en.Given;
@@ -24,8 +23,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
 import java.util.Locale;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -48,14 +45,13 @@ public class PatientCreateSteps {
   Active<NewPatient> input;
 
   @Autowired
-  Available<PatientIdentifier> patients;
+  Active<PatientIdentifier> activePatient;
 
   private final Faker faker = new Faker(Locale.of("en-us"));
 
   @Before("@patient_profile_create")
   public void reset() {
     this.input.reset();
-    this.patients.reset();
   }
 
   @After("@patient_profile_create")
@@ -65,10 +61,8 @@ public class PatientCreateSteps {
 
   @Given("I am adding a new patient with addresses")
   public void i_am_adding_a_new_patient_with_addresses() {
-    NewPatient newPatient = new NewPatient(
-        null,
-        Collections.emptyList(),
-        List.of(
+    this.input.active(
+        current -> current.withAddress(
             new NewPatient.Address(
                 RandomUtil.getRandomDateInPast(),
                 "H",
@@ -83,18 +77,14 @@ public class PatientCreateSteps {
                 RandomUtil.country(),
                 RandomUtil.getRandomString()
             )
-        ), Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
-    this.input.active(newPatient);
-
+        )
+    );
   }
 
   @Given("I am adding a new patient with emails")
   public void i_am_adding_a_new_patient_with_emails() {
-    NewPatient newPatient = new NewPatient(
-        null,
-        Collections.emptyList(),
-        Collections.emptyList(),
-        List.of(
+    this.input.active(
+        current -> current.withPhoneEmail(
             new NewPatient.Phone(
                 RandomUtil.getRandomDateInPast(),
                 "type-value",
@@ -106,20 +96,14 @@ public class PatientCreateSteps {
                 "url",
                 "comment"
             )
-        ),
-        Collections.emptyList(),
-        Collections.emptyList()
+        )
     );
-    this.input.active(newPatient);
   }
 
   @Given("I am adding a new patient with phones")
   public void i_am_adding_a_new_patient_with_phones() {
-    NewPatient newPatient = new NewPatient(
-        null,
-        Collections.emptyList(),
-        Collections.emptyList(),
-        List.of(
+    this.input.active(
+        current -> current.withPhoneEmail(
             new NewPatient.Phone(
                 RandomUtil.getRandomDateInPast(),
                 "type-value",
@@ -131,37 +115,41 @@ public class PatientCreateSteps {
                 "url",
                 "comment"
             )
-        ),
-        Collections.emptyList(),
-        Collections.emptyList()
+        )
     );
-    this.input.active(newPatient);
 
   }
 
   @Given("I am adding a new patient with races")
   public void i_am_adding_a_new_patient_with_races() {
-    NewPatient newPatient = new NewPatient(null, null, null, null, List.of(new NewPatient.Race(
-        RandomUtil.getRandomDateInPast(),
-        "category-value",
-        Arrays.asList("detail1", "detail2"))), null);
-    this.input.active(newPatient);
+    this.input.active(
+        current -> current.withRace(
+            new NewPatient.Race(
+                RandomUtil.getRandomDateInPast(),
+                "category-value",
+                Arrays.asList("detail1", "detail2"))
+        )
+    );
   }
 
   @Given("I am adding a new patient with identifications")
   public void i_am_adding_a_new_patient_with_identifications() {
-    NewPatient newPatient = new NewPatient(null, null, null, null, null, List.of(new NewPatient.Identification(
-        RandomUtil.getRandomDateInPast(),
-        "DL",
-        "TX",
-        "value")));
-    this.input.active(newPatient);
+    this.input.active(
+        current -> current.withIdentification(
+            new NewPatient.Identification(
+                RandomUtil.getRandomDateInPast(),
+                "DL",
+                "TX",
+                "value"
+            )
+        )
+    );
   }
 
   @When("I send a create patient request")
   public void i_submit_the_patient() {
     PatientIdentifier created = controller.create(input.active());
-    patients.available(created);
+    activePatient.active(created);
 
     repository.findById(created.id()).ifPresent(patient::active);
   }
